--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="content-box">
         <form action="">
             <label for="username">Username</label>
-            <input type="text" value="username" required>
+            <input type="text" value="" placeholder="Enter your username here" required>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" placeholder="Enter your username here" required>
             <label for="issue">Select an issue</label>
             <select name="issue" id="issue" required >
                 <option value="query">Query</option>
