--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <label for="username">Username</label>
             <input type="text" value="" placeholder="Enter your username here" required>
             <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="Enter your username here" required>
+            <input type="email" name="email" id="email" placeholder="Enter your email here" required>
             <label for="issue">Select an issue</label>
             <select name="issue" id="issue" required >
                 <option value="query">Query</option>
