--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             var comment = document.getElementById('comment').value
 
             document.write("<h1>Thank You !</h1>")
-            document.write("<h2>The following data has been submitted:<h2>")
+            document.write("<h2>The following data has been submitted:</h2>")
             document.write("Your Name: "+username+"<br>")
             document.write("Your Email: "+email+"<br>")
             document.write("Your issue type: "+issue+"<br>")
