--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Simple Web Contact Form</h1>
     </div>
     <div class="content-box">
-        <form onsubmit="return results();" method="post" mailto:my@site.com>
+        <form onsubmit="return results();" method="post" mailto:kratitech.kshitij@gmail.com>
             <label for="username">Username</label>
             <input type="text" id="username" required>
             <label for="email">Email</label>
